Migrate to gradle-kotlin

--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,12 @@
-/.idea/
-/target/
-/pom.xml.versionsBackup
-/Core/target/
-/Core/pom.xml.versionsBackup
-/NMS/target/
-/NMS/pom.xml.versionsBackup
-/V1_17_R1/target/
-/V1_17_R1/pom.xml.versionsBackup
-/V1_18_R2/target/
-/V1_18_R2/pom.xml.versionsBackup
-/V1_19_R1/target/
-/V1_19_R1/pom.xml.versionsBackup
-/V1_19_R2/target/
-/V1_19_R2/pom.xml.versionsBackup
+/.idea
+/target
+
+/Core/target
+/NMS/target
+/V1_17_R1/target
+/V1_18_R2/target
+/V1_19_R1/target
+/V1_19_R2/target
+
+.gradle
+build
