--- a/Core/src/main/resources/config.yml
+++ b/Core/src/main/resources/config.yml
@@ -11,15 +11,15 @@ Plugin:
   Language: en
   # Plugin prefix name.
   Name: ExcellentEnchants
-  Prefix: '&e%plugin_name% &8» &7'
+  Prefix: '<yellow>%plugin_name% <dark_gray>» <gray>'
 
 # General plugin settings.
 General:
   # Settings for the plugin tasks.
   Tasks:
     Arrow_Trails:
-      # Defines the ticks interval (20 ticks = 1 second) for the arrow particle effect spawning.
-      Ticks_Interval: 1
+      # Defines the tick interval (20 ticks = 1 second) for the arrow particle effect spawning.
+      Ticks_Interval: 2
   # Enchantment global settings.
   Enchantments:
     # List of disabled custom enchantments.
@@ -61,7 +61,7 @@ General:
       # Description format for the item lore.
       # Placeholders:
       # - %description% - Enchantment description.
-      Format: '&8▸ %description%'
+      Format: '<dark_gray>▸ %description%'
   # Settings to obtain enchants via Enchanting Table.
   Enchanting_Table:
     # Enable/Disable this way to obtain custom enchantments.
@@ -114,9 +114,9 @@ Tiers:
   # Tier identifier. Must be unique.
   common:
     # Tier display name.
-    Name: '&fCommon'
+    Name: '<white>Common'
     # Tier color.
-    Color: '&f'
+    Color: '<white>'
     # Tier obtain chances.
     Obtain_Chance:
       ENCHANTING: 80.0
@@ -125,8 +125,8 @@ Tiers:
       FISHING: 80.0
       MOB_SPAWNING: 80.0
   rare:
-    Name: '&aRare'
-    Color: '&a'
+    Name: '<green>Rare'
+    Color: '<green>'
     Obtain_Chance:
       ENCHANTING: 50.0
       VILLAGER: 50.0
@@ -134,8 +134,8 @@ Tiers:
       FISHING: 50.0
       MOB_SPAWNING: 50.0
   exotic:
-    Name: '&eExotic'
-    Color: '&e'
+    Name: '<yellow>Exotic'
+    Color: '<yellow>'
     Obtain_Chance:
       ENCHANTING: 25.0
       VILLAGER: 25.0
@@ -143,8 +143,8 @@ Tiers:
       FISHING: 25.0
       MOB_SPAWNING: 25.0
   legendary:
-    Name: '&6Legendary'
-    Color: '&6'
+    Name: '<gold>Legendary'
+    Color: '<gold>'
     Obtain_Chance:
       ENCHANTING: 10.0
       VILLAGER: 10.0
@@ -152,8 +152,8 @@ Tiers:
       FISHING: 10.0
       MOB_SPAWNING: 10.0
   cursed:
-    Name: '&cCursed'
-    Color: '&c'
+    Name: '<red>Cursed'
+    Color: '<red>'
     Obtain_Chance:
       ENCHANTING: 7.0
       VILLAGER: 5.0
