--- a/Core/src/main/resources/gui.enchants.yml
+++ b/Core/src/main/resources/gui.enchants.yml
@@ -13,25 +13,25 @@ Enchantments:
     Name: '%enchantment_name_formatted%'
     Lore:
       - '%enchantment_description%'
-      - '&7'
-      - '&a▸ &7Tier: &a%enchantment_tier%'
-      - '&a▸ &7Applies to: &a%enchantment_fit_item_types%'
-      - '&a▸ &7Levels: &a%enchantment_level_min% &7- &a%enchantment_level_max%'
-      - '&7'
-      - '&c&lConflicts with:'
-      - '&c▸ &4%enchantment_conflicts%'
-      - '&7'
-      - '&e&lItem Cost to Use:'
-      - '&e▸ &7%enchantment_cost_item%'
-      - '&7'
-      - '&b&lObtain Chance:'
-      - '&b▸ &7Enchanting Table: &b%enchantment_obtain_chance_enchanting%%'
-      - '&b▸ &7Villager Trade: &b%enchantment_obtain_chance_villager%%'
-      - '&b▸ &7Loot Generation: &b%enchantment_obtain_chance_loot_generation%%'
-      - '&b▸ &7Fishing: &b%enchantment_obtain_chance_fishing%%'
-      - '&b▸ &7Mob Spawning: &b%enchantment_obtain_chance_mob_spawning%%'
-      - '&7'
-      - '&d&lClick to switch enchantment levels!'
+      - ''
+      - '<green>▸ <gray>Tier: <green>%enchantment_tier%'
+      - '<green>▸ <gray>Applies to: <green>%enchantment_fit_item_types%'
+      - '<green>▸ <gray>Levels: <green>%enchantment_level_min% <gray>- <green>%enchantment_level_max%'
+      - ''
+      - '<red><b>Conflicts with:'
+      - '<red>▸ <dark_red>%enchantment_conflicts%'
+      - ''
+      - '<yellow><b>Item Cost to Use:'
+      - '<yellow>▸ <gray>%enchantment_cost_item%'
+      - ''
+      - '<aqua><b>Obtain Chance:'
+      - '<aqua>▸ <gray>Enchanting Table: <aqua>%enchantment_obtain_chance_enchanting%%'
+      - '<aqua>▸ <gray>Villager Trade: <aqua>%enchantment_obtain_chance_villager%%'
+      - '<aqua>▸ <gray>Loot Generation: <aqua>%enchantment_obtain_chance_loot_generation%%'
+      - '<aqua>▸ <gray>Fishing: <aqua>%enchantment_obtain_chance_fishing%%'
+      - '<aqua>▸ <gray>Mob Spawning: <aqua>%enchantment_obtain_chance_mob_spawning%%'
+      - ''
+      - '<light_purple><b>Click to switch enchantment levels!'
   # Menu slots to display enchantments.
   Slots: 0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26
 
@@ -43,9 +43,9 @@ Content:
         Priority: 0
         Item:
           Material: ARROW
-          Name: '&aNext Page'
+          Name: '<green>Next Page'
           Lore:
-            - '&7Click to move &aForward&7!'
+            - '<gray>Click to move <green>Forward<gray>!'
     Slots: 35
     Type: PAGE_NEXT
 
@@ -55,8 +55,8 @@ Content:
         Priority: 0
         Item:
           Material: ARROW
-          Name: '&cPrevious Page'
+          Name: '<red>Previous Page'
           Lore:
-            - '&7Click to move &cBack&7!'
+            - '<gray>Click to move <red>Back<gray>!'
     Slots: 27
     Type: PAGE_PREVIOUS
